# deluge-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  bench-fft.sh
app-loader/: Cargo.toml  README.md  build.rs  memory.x  memory_rtt.x
app-loader/src/: devupload.rs  elf.rs  file_browser.rs  flashboot.rs  ghostfat.rs  launcher.rs  main.rs  settings.rs  uf2.rs  ui.rs  usbmsc.rs
crates/armv7-dsp-intrinsics/: Cargo.toml  README.md
crates/armv7-dsp-intrinsics/proptest-regressions/: proptests.txt
crates/armv7-dsp-intrinsics/src/: lib.rs  proptests.rs
crates/deluge/: Cargo.toml
crates/deluge-alloc/: Cargo.toml  README.md
crates/deluge-alloc/src/: lib.rs
crates/deluge-bsp/: Cargo.toml  README.md
crates/deluge-bsp/src/: audio.rs  audio_block.rs  battery.rs  bus.rs  controls.rs  encoder.rs  encoder_detent.rs  fat.rs  flash.rs  jacks.rs  lib.rs  midi_gate.rs  oled.rs  pads.rs  pic.rs  rgb.rs  sample_fmt.rs  scux_dvu_path.rs  scux_src_path.rs  scux_usb_tx_path.rs  sd.rs  system.rs  uart.rs
crates/deluge-bsp/src/usb/: bot.rs  ids.rs  mod.rs
crates/deluge-bsp/src/usb/classes/: audio.rs  midi.rs  mod.rs  msc.rs
crates/deluge-fft/: Cargo.toml  README.md
crates/deluge-fft/src/: test_utils.rs
crates/deluge-fft/tests/: dsp_pipeline.rs  rustfft_oracle.rs
crates/deluge-fonts/: Cargo.toml  README.md
crates/deluge-fonts/src/: font_5px.rs  font_apple.rs  lib.rs  metric_bold_13px.rs  metric_bold_20px.rs  metric_bold_9px.rs  seven_segment.rs
crates/deluge-grid-toolkit/: Cargo.toml  README.md
crates/deluge-grid-toolkit/src/: color.rs  component.rs  float_ext.rs  grid.rs  imode.rs  layer.rs  lib.rs  pad.rs  palette.rs
crates/deluge-grid-toolkit/src/animations/: expand_collapse.rs  explode.rs  fade.rs  mod.rs  scroll.rs  smear_scroll.rs  zoom.rs
crates/deluge-grid-toolkit/src/widgets/: automation_column.rs  clip_cell.rs  clip_grid.rs  clip_list.rs  clip_row.rs  mod.rs  sidebar.rs  text_keyboard.rs  waveform_display.rs
crates/deluge-image/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/deluge-image/src/: crc.rs  elf.rs  fat.rs  lib.rs  settings.rs  uf2.rs
crates/deluge-macros/: Cargo.toml
crates/deluge-macros/src/: lib.rs
crates/deluge-macros/tests/: ui.rs
crates/deluge-macros/tests/ui/: not_async.rs  not_async.stderr  too_many_args.rs  unknown_attr.rs  unknown_attr.stderr
crates/deluge-protocol/: Cargo.toml
crates/deluge-protocol/src/: lib.rs
crates/deluge-sdk/: Cargo.toml  README.md
crates/deluge-sdk-macros/: Cargo.toml  README.md
crates/deluge-sdk-macros/src/: lib.rs
crates/deluge-sdk-macros/tests/ui/: too_many_args.stderr
crates/deluge-sdk/src/: audio.rs  clock.rs  cv_gate.rs  host.rs  input.rs  jacks.rs  leds.rs  lib.rs  midi.rs  oled.rs  pads.rs  pic_service.rs  sd.rs  sync_led.rs
crates/deluge-sim-link/: Cargo.toml
crates/deluge-sim-link/src/: audio.rs  lib.rs
crates/deluge-ui/: Cargo.toml  README.md
crates/deluge-ui-toolkit/: Cargo.toml  README.md  build.rs
crates/deluge-ui-toolkit/src/: hmenu.rs  positionable.rs
crates/deluge-ui-toolkit/src/components/: envelope.rs  header.rs  sliced_waveform.rs  waveform.rs
crates/deluge-ui-toolkit/src/editors/: mod.rs  text_value_editor.rs
crates/deluge-ui-toolkit/src/params/: bipolar_bar.rs  hpf.rs  percent.rs  sidechain.rs  unipolar_bar.rs
crates/deluge-ui-toolkit/src/primitives/: dotted_line.rs
crates/deluge-ui/src/: graphics.rs  hmenu.rs  horizontal_menu.rs  icons.rs  lib.rs  menu.rs  text.rs
crates/deluge-ui/src/components/: list_menu_view.rs  looped_waveform.rs  mod.rs  scrollbar.rs  title.rs
crates/deluge-ui/src/editors/: bipolar_value_editor.rs  editor.rs  float_editor.rs  unipolar_value_editor.rs
crates/deluge-ui/src/horizontal_menu/: builder.rs  icon.rs  icon_with_label.rs  placeholder.rs  text_with_label.rs  value.rs
crates/deluge-ui/src/icons/: bmp_loader.rs
crates/deluge-ui/src/params/: attack.rs  length_slider.rs  lpf.rs  mod.rs  pan.rs  percent.rs  release.rs  slider.rs  unipolar_knob.rs
crates/deluge-ui/src/primitives/: filled_polygon.rs  icon.rs  mod.rs
crates/deluge-ui/src/text/: fonts.rs  vari_font.rs  vari_text_style.rs
crates/deluge/src/: cv_gate.rs  input.rs  lib.rs  oled.rs  sync_led.rs  usb_debug.rs
crates/fixedpoint/: Cargo.toml  README.md
crates/fixedpoint/proptest-regressions/: lib.txt
crates/fixedpoint/src/: lib.rs
crates/rza1l-hal/: Cargo.toml  build.rs  rza1l.x  rza1l_rtt.x
crates/rza1l-hal/src/: adc.rs  allocator.rs  bsc.rs  cache.rs  dmac.rs  gic.rs  gpio.rs  lib.rs  memmap.rs  mmio.rs  mmu.rs  mtu2.rs  rspi.rs  scux.rs  sdhi.rs  spibsc.rs  ssi.rs  startup.rs  stb.rs  time_driver.rs  uart.rs
crates/rza1l-hal/src/scux/: regs.rs
crates/rza1l-hal/src/usb/: driver.rs  fifo.rs  host.rs  mod.rs  pipe.rs  regs.rs
deluge/: Cargo.toml
deluge-bsp/: Cargo.toml
deluge-bsp/src/: audio.rs  audio_block.rs  bus.rs  cv_gate.rs  fat.rs  lib.rs  oled.rs  pic.rs  sd.rs  system.rs  trigger_clock.rs
deluge-bsp/src/usb/: bot.rs  driver.rs  fifo.rs  host.rs  mod.rs  pipe.rs  regs.rs
deluge/src/: audio.rs  leds.rs  lib.rs  pads.rs  pic_service.rs  sd.rs  usb_debug.rs
examples/additive_osc/: Cargo.toml  README.md  build.rs
examples/additive_osc/csrc/: additive.cpp
examples/additive_osc/src/: main.rs
examples/audio_passthru/: Cargo.toml  build.rs
examples/audio_passthru/src/: main.rs
examples/audio_passthru_irq/: Cargo.toml
examples/audio_passthru_irq/src/: main.rs
examples/blinky/: Cargo.toml
examples/blinky/src/: main.rs
examples/button_leds/: Cargo.toml
examples/button_leds/src/: main.rs
examples/clock_jacks/: Cargo.toml
examples/clock_jacks/src/: main.rs
examples/input_demo/: Cargo.toml
examples/input_demo/src/: main.rs
wren-firmware/: Cargo.toml  build.rs  memory.x  memory_rtt.x
wren-firmware/examples/: cv_lfo.wren  hello.wren  midi_synth.wren  pads.wren
wren-firmware/src/: audio.rs  bindings.rs  main.rs
wren-firmware/wren/: prelude.wren
wren-sys/: Cargo.toml  build.rs
wren-sys/csrc/: csupport.c
wren-sys/src/: foreign.rs  lib.rs
(+160 files in other folders)
