[package]
publish = false  # binary crate — not for crates.io
name = "app-loader"
version = "0.1.0"
edition = "2024"
license.workspace = true

[[bin]]
name = "app-loader"
test = false

[dependencies]
rza1l-hal = { path = "../crates/rza1l-hal" }
deluge-alloc = { path = "../crates/deluge-alloc" }
deluge-bsp = { path = "../crates/deluge-bsp" }
deluge-image = { path = "../crates/deluge-image" }
cortex-ar = { workspace = true }
embassy-executor = { workspace = true, features = ["nightly", "platform-cortex-ar", "executor-thread"] }
embassy-time = { workspace = true, features = ["tick-hz-1_000_000"] }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
embassy-usb = { workspace = true }
log = { workspace = true }
rtt-target = { workspace = true, optional = true }

[features]
default = []
rtt = ["dep:rtt-target", "rza1l-hal/rtt"]
