[package]
name = "deluge"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "User-friendly SDK for building apps on the Synthstrom Deluge."

[dependencies]
deluge-macros = { path = "../deluge-macros" }
deluge-bsp = { path = "../deluge-bsp" }
rza1l-hal = { path = "../rza1l-hal" }
cortex-ar = { workspace = true }
log = { workspace = true }
embedded-hal = "1"
embedded-graphics-core = "0.4"
rtt-target = { workspace = true, optional = true }
embassy-executor = { workspace = true, features = [
    "nightly",
    "platform-cortex-ar",
    "executor-thread",
] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, features = ["tick-hz-1_000_000"] }

[features]
default = []
## Enable RTT (SEGGER Real-Time Transfer) debug logging. Initialises the RTT
## logger in the `#[deluge::app]` runtime and turns on RTT in the HAL/BSP.
## Off by default so a minimal app does not pull in the RTT control block.
## An app that enables this must also build with its matching rtt linker script
## (the example template's `rtt` feature wires both).
rtt = ["dep:rtt-target", "rza1l-hal/rtt"]
