[package]
name = "armv7-dsp-intrinsics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "ARMv7 DSP intrinsics for efficient fixed-point arithmetic"
categories = ["embedded", "no-std", "hardware-support"]
keywords = ["arm", "dsp", "simd", "fixed-point", "intrinsics"]

[dependencies]

[features]
default = []
# Enable unstable ARM intrinsics (requires nightly)
nightly = []

[lib]
name = "armv7_dsp_intrinsics"
path = "src/lib.rs"
