[package]
name = "deluge-fft"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = []
# Expose the test-only reference DFT and round-trip helpers.
test-utils = []

[dependencies]

[dev-dependencies]
# For host-side unit tests only — not pulled in for no-std targets.
approx = "0.5"
# Benchmark harness.
criterion = { version = "0.8", features = ["html_reports"] }
# Reference implementation to compare against.
rustfft = "6"

[[bench]]
name = "fft_bench"
harness = false
