[package]
name = "deluge-image"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "Pure firmware-image format logic (ELF load classification + FSB metadata validation) shared by the app-loader."

[lib]
# Host/QEMU unit tests run via `cargo test` on a non-bare-metal target. The
# crate is no_std but has no hardware deps, so it builds for the host too.
test = true

[dependencies]
# Intentionally none — pure logic, no_std, no hardware deps, so it unit-tests on
# the host without a supply chain.
