[package]
name = "deluge-macros"
version.workspace = true
# Pinned to 2021 (not the workspace 2024): proc-macro expansion is edition-
# sensitive and this crate is validated against 2021.
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for the Deluge SDK (#[deluge::app])."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
# Host-only: compile-fail tests asserting #[deluge::app] rejects bad input with
# good diagnostics. The error cases emit `compile_error!` before any expansion,
# so they need no embedded deps and produce stable stderr.
trybuild = "1"
