[package]
# Published as `deluge-sdk-macros` to pair clearly with the `deluge-sdk` crate
# (and avoid implying it belongs to the unrelated `deluge` crate on crates.io);
# the import name stays `deluge_macros` via [lib] below. You don't depend on
# this directly — it's re-exported as `deluge::app`.
name = "deluge-sdk-macros"
version.workspace = true
# Pinned to 2021 (not the workspace 2024): proc-macro expansion is edition-
# sensitive and this crate is validated against 2021.
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Procedural macros for the Deluge SDK (#[deluge::app])."
categories = ["embedded", "no-std", "development-tools::procedural-macro-helpers"]
keywords = ["deluge", "macros", "proc-macro", "embedded", "app"]

[lib]
name = "deluge_macros"
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
# Host-only: compile-fail tests asserting #[deluge::app] rejects bad input with
# good diagnostics. The error cases emit `compile_error!` before any expansion,
# so they need no embedded deps and produce stable stderr.
trybuild = "1"
