[package]
# Published as `deluge-sdk` (plain `deluge` is taken on crates.io by an
# unrelated stream library); the library/import name stays `deluge` via [lib]
# below, so dependents and `use deluge::…` are unaffected.
name = "deluge-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "User-friendly SDK for building apps on the Synthstrom Deluge."
categories = ["embedded", "no-std", "hardware-support"]
keywords = ["deluge", "synthstrom", "embassy", "rza1", "embedded"]

# docs.rs builds on the x86_64 host by default; this SDK only compiles for the
# device triple (embassy-executor's platform-cortex-ar, nightly), so build the
# docs there.
[package.metadata.docs.rs]
default-target = "armv7a-none-eabihf"

[lib]
name = "deluge"
path = "src/lib.rs"

[dependencies]
deluge-macros = { path = "../deluge-sdk-macros", version = "0.1.0", package = "deluge-sdk-macros" }
deluge-bsp = { path = "../deluge-bsp", version = "0.1.0" }
deluge-alloc = { path = "../deluge-alloc", version = "0.1.0" }
rza1l-hal = { path = "../rza1l-hal", version = "0.1.0" }
fixedpoint = { workspace = true }
cortex-ar = { workspace = true }
log = { workspace = true }
embedded-hal = "1"
embedded-graphics-core = "0.4"
rtt-target = { workspace = true, optional = true }
embassy-executor = { workspace = true, features = [
    "nightly",
    "platform-cortex-ar",
    "executor-thread",
] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, features = ["tick-hz-1_000_000"] }
embassy-usb = { workspace = true, optional = true }

[features]
default = []
## Register the on-chip SRAM heap (`deluge-alloc`) as the global allocator, so
## `alloc` collections (`String`, `Vec`, `format!`) work. Needed by apps that use
## the GPL `deluge-ui-toolkit`. Off by default — the SDK is otherwise allocator-free.
## SDRAM is left for bulk audio buffers (samples/delay lines), allocated
## explicitly via `deluge_alloc::SDRAM`. Apps enabling this must also
## build with `-Zbuild-std=core,alloc`.
alloc = []
## Route the `log` crate to a USB CDC-ACM serial interface (a `/dev/ttyACM*`
## port on the host) so firmware logs are visible over the USB cable with **no
## debug probe**. Off by default (brings up a USB device + costs flash/RAM).
## Only one global logger may be registered, so `usb-log` takes precedence over
## the `rtt` feature when both are enabled.
usb-log = ["dep:embassy-usb"]
## Use the per-block RX DMA interrupt clock for `dlg.audio()` (drift-free, lower
## latency) instead of the default poll loop. Same `process()` API.
audio-irq = ["deluge-bsp/audio-irq"]
## Enable RTT (SEGGER Real-Time Transfer) debug logging. Initialises the RTT
## logger in the `#[deluge::app]` runtime and turns on RTT in the HAL/BSP.
## Off by default so a minimal app does not pull in the RTT control block.
## An app that enables this must also build with its matching rtt linker script
## (the example template's `rtt` feature wires both).
rtt = ["dep:rtt-target", "rza1l-hal/rtt"]
